fixed black background bug on mobile

--- a/css/marisca-v3.css
+++ b/css/marisca-v3.css
@@ -499,7 +499,7 @@ img.headshot {
 
 @media screen and (max-device-width: 640px) {
 	html {
-		background-color: #000000;
+		background-color: #FFFFFF;
 	}
 
 	#bgvid {
